--- a/app/src/main/res/layout/header.xml
+++ b/app/src/main/res/layout/header.xml
@@ -3,7 +3,7 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="160dp"
-    android:background="@color/colorPrimaryDark"
+    android:background="@drawable/pooling"
     android:padding="20dp">
     
     <ImageView
