--- a/app/src/main/res/menu/drawermenu.xml
+++ b/app/src/main/res/menu/drawermenu.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
-<item android:id="@+id/db" android:title="dashboard" android:icon="@drawable/ic_eye"/>
-    <item android:id="@+id/event" android:title="events" android:icon="@drawable/ic_eye"/>
-    <item android:id="@+id/search" android:title="search" android:icon="@drawable/ic_eye"/>
-    <item android:id="@+id/settings" android:title="settings" android:icon="@drawable/ic_eye"/>
-    <item android:id="@+id/activities" android:title="activities" android:icon="@drawable/ic_eye"/>
-    <item android:id="@+id/logout" android:title="logout" android:icon="@drawable/ic_eye"/>
+<item android:id="@+id/payment" android:title="Payments" android:icon="@drawable/payment"/>
+    <item android:id="@+id/booking" android:title="Bookings" android:icon="@drawable/booking"/>
+    <item android:id="@+id/kyc" android:title="KYC" android:icon="@drawable/kyc"/>
+    <item android:id="@+id/offer" android:title="Offers" android:icon="@drawable/offer"/>
+    <item android:id="@+id/help" android:title="Help" android:icon="@drawable/help"/>
+    <item android:id="@+id/logout" android:title="Logout" android:icon="@drawable/logout"/>
 </menu>
