--- a/app/src/main/res/layout/activity_homepage.xml
+++ b/app/src/main/res/layout/activity_homepage.xml
@@ -153,4 +153,10 @@
 
     </com.google.android.material.navigation.NavigationView>
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/userid"
+        android:visibility="gone"/>
+
 </androidx.drawerlayout.widget.DrawerLayout>
