--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,5 +11,8 @@
     <color name="login_form_details_light">#1affffff</color>
     <color name="login_form_details_medium">#66ffffff</color>
 
+    <color name="iron">#CCCCCC</color>
+    <color name="primary">#E43F3F</color>
+
     <color name="navyblue">#0077e6</color>
 </resources>
